# Accouting_System

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: AccountingSystem.h  BirthdayReminder.h  BudgetReminder.h  Category.h  CategoryManager.h  ChartGenerator.h  Date.h  FinanceAdvisor.h  JsonStorage.h  Record.h  StatisticsManager.h  Subscription.h  SubscriptionManager.h  ThemeManager.h  User.h
src/: AccountingSystem.cpp  BirthdayReminder.cpp  BudgetReminder.cpp  Category.cpp  CategoryManager.cpp  ChartGenerator.cpp  Date.cpp  FinanceAdvisor.cpp  JsonStorage.cpp  Record.cpp  StatisticsManager.cpp  Subscription.cpp  SubscriptionManager.cpp  ThemeManager.cpp  User.cpp  main.cpp
tests/: test_category.cpp  test_category_manager.cpp  test_integration_record_flow.cpp  test_integration_statistics.cpp  test_integration_storage_roundtrip.cpp  test_record.cpp
